--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,8 @@ data.db
 sites/*
 !sites/_example.js
 
+commands/*
+!commands/_example.js
+
 # this file is only used for developmental purposes
 crawlman.js
