--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dotenv": "^10.0.0",
     "jsdom": "^19.0.0",
     "knex": "^0.95.15",
-    "sqlite3": "^5.0.2",
+    "sqlite3": "npm:@vscode/sqlite3@^5.0.7",
     "user-agents": "^1.0.873"
   }
 }
