--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   "author": "Marcus Jang <makerpopo@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "bent": "^7.3.12",
     "debug": "^4.3.3",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
-    "jsdom": "^19.0.0",
+    "fast-xml-parser": "^4.0.1",
     "knex": "^0.95.15",
-    "sqlite3": "npm:@vscode/sqlite3@^5.0.7",
-    "user-agents": "^1.0.873"
+    "node-fetch": "^2.6.6",
+    "puppeteer": "^13.0.1",
+    "sqlite3": "npm:@vscode/sqlite3@^5.0.7"
   }
 }
