--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "sir-ardbot",
-  "version": "1.0.0",
+  "version": "1.5.0",
   "description": "Sir Ardbot is a crawling bot for new listings on various online liquor retailers.",
   "main": "index.js",
   "scripts": {
-    "test": "node test"
+    "start": "node index.js"
   },
   "author": "Marcus Jang <makerpopo@gmail.com>",
   "license": "ISC",
