--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Marcus Jang <makerpopo@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "acorn": "^8.7.0",
     "debug": "^4.3.3",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
