Add .git to watch exception

--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
 			"restart_delay": 1000,
 			"cron_restart": "30 4 * * *",
 			"watch": true,
-			"ignore_watch": [ "data.db", "node_modules" ]
+			"ignore_watch": [ ".git", "data.db", "node_modules" ]
 		}
 	]
 }
