--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
 			"script": "./index.js",
 			"restart_delay": 1000,
 			"cron_restart": "30 4 * * *",
-			"watch": true,
+			"watch": false,
 			"ignore_watch": [ "[\\/\\\\]\\./", "data.db", "node_modules" ]
 		}
 	]
