--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,7 @@
 	path = commands
 	url = git@github.com:marcusjang/sir-ardbot-commands.git
 	branch = es6
+[submodule "events"]
+	path = events
+	url = git@github.com:marcusjang/sir-ardbot-events.git
+	branch = main
