--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "knex": "^0.95.15",
     "node-fetch": "^3.2.0",
     "puppeteer": "^13.0.1",
-    "sqlite3": "npm:@vscode/sqlite3@^5.0.7"
+    "sqlite3": "npm:@vscode/sqlite3@^5.0.7",
+    "user-agents": "^1.0.913"
   }
 }
