--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dotenv": "^10.0.0",
     "fast-xml-parser": "^4.0.1",
     "knex": "^0.95.15",
-    "node-fetch": "^3.2.0",
+    "node-fetch": ">=3.2.10",
     "puppeteer": "^13.1.3",
     "sqlite3": "npm:@vscode/sqlite3@^5.0.7",
     "user-agents": "^1.0.913"
