--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
   "dependencies": {
     "acorn": "^8.7.0",
     "debug": "^4.3.3",
-    "discord.js": "^13.3.1",
+    "discord.js": "^13.12.0",
     "dotenv": "^10.0.0",
     "fast-xml-parser": "^4.0.1",
-    "knex": "^0.95.15",
+    "knex": "^2.4.0",
     "node-fetch": ">=3.2.10",
-    "puppeteer": "^13.1.3",
-    "sqlite3": "npm:@vscode/sqlite3@^5.0.7",
+    "puppeteer": "^19.5.1",
+    "sqlite3": "^5.1.4",
     "user-agents": "^1.0.913"
   }
 }
