--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "knex": "^2.4.0",
     "node-fetch": ">=3.2.10",
     "puppeteer": "^19.11.1",
-    "sqlite3": "^5.1.6",
-    "user-agents": "^1.0.913"
+    "sqlite3": "^5.1.6"
   }
 }
