--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "repository": "github:marcusjang/sir-ardbot",
   "dependencies": {
+    "@vscode/sqlite3": "^5.1.6-vscode",
     "acorn": "^8.7.0",
     "debug": "^4.3.3",
     "discord.js": "^13.12.0",
@@ -21,7 +22,6 @@
     "fast-xml-parser": "^4.0.1",
     "knex": "^2.4.0",
     "node-fetch": ">=3.2.10",
-    "puppeteer": "^19.11.1",
-    "sqlite3": "^5.1.6"
+    "puppeteer": "^19.11.1"
   }
 }
