--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "repository": "github:marcusjang/sir-ardbot",
   "dependencies": {
-    "@vscode/sqlite3": "^5.1.6-vscode",
+    "sqlite3": "npm:@vscode/sqlite3@^5.1.6-vscode",
     "acorn": "^8.7.0",
     "debug": "^4.3.3",
     "discord.js": "^13.12.0",
