--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sir-ardbot",
-  "version": "2.0.8",
+  "version": "2.0.12",
   "description": "Sir Ardbot is a crawling bot for new listings on various online retailers.",
   "main": "index.js",
   "type": "module",
@@ -14,7 +14,7 @@
   "license": "ISC",
   "repository": "github:marcusjang/sir-ardbot",
   "dependencies": {
-    "sqlite3": "npm:@vscode/sqlite3@^5.1.6-vscode",
+    "sqlite3": "^5.1.6",
     "acorn": "^8.7.0",
     "debug": "^4.3.3",
     "discord.js": "^13.12.0",
