--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   "license": "ISC",
   "repository": "github:marcusjang/sir-ardbot",
   "dependencies": {
-    "sqlite3": "^5.1.6",
-    "acorn": "^8.7.0",
-    "debug": "^4.3.3",
+    "sqlite3": "^5.1.7",
+    "acorn": "^8.11.3",
+    "debug": "^4.3.4",
     "discord.js": "^13.12.0",
-    "dotenv": "^10.0.0",
-    "fast-xml-parser": "^4.3.0",
+    "dotenv": "^16.4.5",
+    "fast-xml-parser": "^4.3.6",
     "knex": "^2.4.0",
-    "node-fetch": ">=3.2.10",
+    "node-fetch": "^3.3.2",
     "puppeteer": "^19.11.1"
   }
 }
