--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sir-ardbot",
-  "version": "2.0.14",
+  "version": "2.0.15",
   "description": "Sir Ardbot is a crawling bot for new listings on various online retailers.",
   "main": "index.js",
   "type": "module",
@@ -14,7 +14,6 @@
   "license": "ISC",
   "repository": "github:marcusjang/sir-ardbot",
   "dependencies": {
-    "sqlite3": "^5.1.7",
     "acorn": "^8.11.3",
     "debug": "^4.3.4",
     "discord.js": "^13.12.0",
@@ -22,6 +21,9 @@
     "fast-xml-parser": "^4.3.6",
     "knex": "^2.4.0",
     "node-fetch": "^3.3.2",
-    "puppeteer": "^19.11.1"
+    "puppeteer": "^22.6.2",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "sqlite3": "^5.1.7"
   }
 }
